# goright

./: README.md  pyproject.toml
goright/: __init__.py  env.py  goright.py  play_goright.py  utils.py
goright/jax/: env.py
