[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "goright"
version = "0.1.0"
description = "An implementation of the GoRight environment for RL agents."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Lucas Cruz", email = "lucas@lucas-cruz.com" }]
license = { text = "MIT License" }
dependencies = [
    "flax>=0.12.0",
    "gymnasium>=1.0.0",
    "ipykernel>=6.29.5",
    "jax>=0.6.0",
    "matplotlib>=3.10.0",
    "numpy>=2.2.1",
]

[project.optional-dependencies]
extra = [
    "pygame>=2.6.1",
]

[tool.black]

[tool.isort]
atomic = true
profile = "black"
src_paths = ["gymnasium", "tests", "docs/_scripts"]
extra_standard_library = ["typing_extensions"]
indent = 4
lines_after_imports = 2
multi_line_output = 3

[tool.pyright]
include = ["goright/**"]
exclude = ["tests/**", "**/node_modules", "**/__pycache__"]
strict = []

typeCheckingMode = "basic"
pythonVersion = "3.11"
pythonPlatform = "All"
typeshedPath = "typeshed"
enableTypeIgnoreComments = true

[tool.pytest.ini_options]
filterwarnings = ["ignore::DeprecationWarning:gymnasium.*:"]

[tool.uv.sources]
gymnasium = { git = "https://github.com/cruz-lucas/Gymnasium.git" }

[dependency-groups]
dev = [
    "pre-commit>=4.0.1",
]
